set up database

--- a/templates/setup_success.html
+++ b/templates/setup_success.html
@@ -10,7 +10,7 @@
 			<div class="frame_center">
 				<h1>Setup successful</h1>
 				<p>
-					You can change the channel at any time.
+					{{ msg }}
 				</p>
 				<div class="close_note">
 					<p>
